Fixed a CSS overlapping bug

--- a/Innovate/www/static/css/aboutus.css
+++ b/Innovate/www/static/css/aboutus.css
@@ -111,89 +111,6 @@ ul.accordion li .bgDescription{
     display:none;
     z-index: 0;
 }
-.nav{
-    float :right;
-    list-style:none;
-    margin-top: -100px;
-
-    font-family: 'Lobster', cursive;
-
-
-/*margin-right: -4px;*/
-  width:120px;
-
-
-
- }
-
-
-/*.img ul { margin:0; padding:0; }*/
-.nav li { list-style: none;
- 
-
-
- }
-
-
-
-.nav li a {
- color: #fff;
- cursor: pointer;
- display:block;                
- text-decoration:none;
- width:100%;
- font-size: 12px;
- font-family: 'Lobster', cursive;
- text-transform: uppercase;
-}
-
-.nav li:hover {
-/* background:rgb(51,3,3);*/
- position: relative;
- padding:5px;
-/* border:2px solid rgb(51,3,3);*/
- width:100%;
-
-/*-moz-box-shadow: 0 0 5px 5px rgb(46,1,1);
--webkit-box-shadow: 0 0 5px 5px rgb(46,1,1);
-box-shadow: 0 0 5px 5px rgb(46,1,1);*/
-
-
-border-radius:25px;
-
-}
-
-li ul {
-;
- left: 149px;
- top: 0;
- display: none;
-
-
- }
-
-ul li {
- position: relative;
- }
-
-
-
-li:hover ul { display: block; 
-    text-transform: uppercase;
-
-}
-
-
-/*.zoom1 {
-  -webkit-transition: all .1s ease-in-out;
-          transition: all .1s ease-in-out;
-}
-.zoom1:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-}*/
-
-
 .nest{
     float:left;
     position: relative;
